fix(search): Viewport inline size based spacing

--- a/public/css/base/global.css
+++ b/public/css/base/global.css
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-	padding-block: 1rem 2rem;
+	padding-block: 2rem 3rem;
 }
 
 input,
