--- a/public/css/components/search.css
+++ b/public/css/components/search.css
@@ -6,7 +6,7 @@
 
 .Search-list {
 	display: grid;
-	gap: 2rem;
+	gap: clamp(1rem, 4vi, 2rem);
 	grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
 	list-style: none;
 }
